--- a/app/src/main/res/layout/dialog_home_detail.xml
+++ b/app/src/main/res/layout/dialog_home_detail.xml
@@ -11,10 +11,7 @@
         android:id="@+id/homeDetailPicture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/baseline_home_24"
-        android:padding="40dp"
-        android:scaleX="5"
-        android:scaleY="5"
+        app:srcCompat="@drawable/rent_icon_128"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,10 +23,11 @@
         android:id="@+id/homeDetailName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
+        android:background="@android:drawable/editbox_background"
+        android:backgroundTint="?attr/colorPrimary"
+        android:textSize="20sp"
         android:textColor="?attr/colorOnPrimary"
         android:textStyle="bold"
-        android:layout_marginBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/homeDetailPicture"
@@ -41,7 +39,7 @@
         android:id="@+id/nameDivider"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="?attr/colorPrimaryVariant"
+        android:background="?attr/colorPrimaryDark"
         app:layout_constraintTop_toBottomOf="@id/homeDetailName"
         android:layout_marginTop="5dp"
         />
@@ -61,11 +59,12 @@
 
     <TextView
         android:id="@+id/homeDetailMembers"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="?attr/colorOnPrimary"
         android:layout_marginStart="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@android:drawable/editbox_background"
+        android:backgroundTint="?attr/colorPrimary"
         app:layout_constraintStart_toEndOf="@id/homeDetailMembersText"
         app:layout_constraintTop_toTopOf="@id/homeDetailMembersText"
         app:layout_constraintBottom_toBottomOf="@id/homeDetailMembersText"
@@ -78,9 +77,9 @@
         android:src="@drawable/baseline_person_add_24"
         style="?attr/imageButtonStyle"
         app:layout_constraintStart_toEndOf="@id/homeDetailName"
-        app:layout_constraintTop_toTopOf="@id/homeDetailName"
-        app:layout_constraintBottom_toBottomOf="@id/homeDetailName"
-        android:layout_marginStart="10dp"
+        app:layout_constraintBottom_toTopOf="@id/homeDetailName"
+        android:layout_marginBottom="-10dp"
+        android:layout_marginStart="15dp"
         android:contentDescription="@string/add_members_button" />
 
     <Button
