--- a/app/src/main/res/drawable/dialog_background.xml
+++ b/app/src/main/res/drawable/dialog_background.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-<gradient
-    android:startColor="?attr/colorPrimary"
-    android:endColor="@color/ivory"
-    android:type="radial"
-    android:gradientRadius="220%p"
-    />
-<corners
-    android:radius="30dp"
-    />
-<padding
-    android:top="10dp"
-    />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <stroke
+        android:width="2dp"
+        android:color="?attr/colorOnPrimary" />
+    <solid
+        android:color="?attr/colorPrimaryVariant" />
+    <corners
+        android:radius="30dp" />
+    <padding
+        android:top="10dp" />
 </shape>
