--- a/app/src/main/res/drawable/fun_icon_128.xml
+++ b/app/src/main/res/drawable/fun_icon_128.xml
@@ -1,4 +1,4 @@
-<vector android:height="100dp" android:tint="#000000"
+<vector android:height="100dp" android:tint="?attr/colorOnPrimary"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="100dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M2,22l14,-5l-9,-9z"/>
