--- a/app/src/main/res/layout/dialog_add_home.xml
+++ b/app/src/main/res/layout/dialog_add_home.xml
@@ -18,7 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:textStyle="bold"
         android:textColor="?attr/colorOnPrimary"
-        android:textSize="@dimen/medium_text_size"
+        android:textSize="@dimen/large_text_size"
         android:layout_marginBottom="5dp"
         />
 
@@ -26,7 +26,8 @@
         android:id="@+id/addHomeNameDivider"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="?attr/colorPrimaryVariant"
+        android:background="?attr/colorPrimaryDark"
+        android:layout_marginHorizontal="5dp"
         app:layout_constraintTop_toBottomOf="@id/addHomeDialogTitle"
         android:layout_marginTop="5dp"
         />
