--- a/app/src/main/res/layout/dialog_add_member.xml
+++ b/app/src/main/res/layout/dialog_add_member.xml
@@ -64,8 +64,8 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
+            android:background="?attr/colorPrimary"
             android:textColor="?attr/colorOnPrimary"
-            android:background="@color/ivory"
             android:layout_height="wrap_content"
             android:hint="@string/add_member_dialog_hint" />
     </com.google.android.material.textfield.TextInputLayout>
