--- a/app/src/main/res/layout/dialog_history_detail.xml
+++ b/app/src/main/res/layout/dialog_history_detail.xml
@@ -7,7 +7,7 @@
     android:layout_gravity="center"
     android:padding="25dp"
     android:background="@drawable/dialog_background"
-    android:backgroundTint="@color/ivory"
+    android:backgroundTint="?attr/colorPrimaryDark"
     tools:context=".dialog.ChoreDetailDialog"
     >
 
@@ -20,32 +20,30 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/baseline_close_24"
-        android:minWidth="0dp"
-        android:minHeight="0dp"
         />
 
     <TextView
         android:id="@+id/createChoreName"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:maxWidth="488dp"
-        android:minWidth="350dp"
         android:textColor="?attr/colorOnPrimary"
-        android:textSize="@dimen/medium_text_size"
+        android:textSize="@dimen/large_text_size"
         android:textStyle="bold"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:text="@string/chore_name_placeholder"
+        android:background="@android:drawable/editbox_background"
+        android:backgroundTint="?attr/colorPrimary"
         />
 
     <View
         android:id="@+id/line2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginVertical="10dp"
+        android:layout_marginTop="10dp"
         android:background="?attr/colorOnPrimary"
         app:layout_constraintTop_toBottomOf="@id/createChoreName" />
 
@@ -64,6 +62,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="?attr/colorOnPrimary"
+        android:background="@android:drawable/editbox_background"
+        android:backgroundTint="?attr/colorPrimary"
         app:layout_constraintStart_toEndOf="@id/choreDetailAssignedToText"
         app:layout_constraintTop_toTopOf="@id/choreDetailAssignedToText"
         app:layout_constraintBottom_toBottomOf="@id/choreDetailAssignedToText"
@@ -92,6 +92,8 @@
         android:id="@+id/choreDetailMinsToComplete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@android:drawable/editbox_background"
+        android:backgroundTint="?attr/colorPrimary"
         android:textColor="?attr/colorOnPrimary"
         android:layout_marginStart="20dp"
         app:layout_constraintBottom_toBottomOf="@id/choreDetailTimeToDoText"
@@ -133,6 +135,8 @@
         android:id="@+id/choreDetailPoints"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@android:drawable/editbox_background"
+        android:backgroundTint="?attr/colorPrimary"
         android:textColor="?attr/colorOnPrimary"
         app:layout_constraintTop_toTopOf="@id/choreDetailRewardText"
         app:layout_constraintBottom_toBottomOf="@id/choreDetailRewardText"
@@ -163,6 +167,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="?attr/colorOnPrimary"
+        android:layout_marginStart="10dp"
         app:layout_constraintTop_toTopOf="@id/choreDetailDueText"
         app:layout_constraintBottom_toBottomOf="@id/choreDetailDueText"
         app:layout_constraintStart_toEndOf="@id/choreDetailDueDate"
@@ -172,6 +177,8 @@
         android:id="@+id/choreDetailDueDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@android:drawable/editbox_background"
+        android:backgroundTint="?attr/colorPrimary"
         android:textColor="?attr/colorOnPrimary"
         app:layout_constraintTop_toTopOf="@id/choreDetailDueText"
         app:layout_constraintBottom_toBottomOf="@id/choreDetailDueText"
@@ -189,6 +196,8 @@
         app:layout_constraintTop_toTopOf="@id/choreDetailDueText"
         app:layout_constraintBottom_toBottomOf="@id/choreDetailDueText"
         app:layout_constraintStart_toEndOf="@id/choreDetailAt"
+        android:background="@android:drawable/editbox_background"
+        android:backgroundTint="?attr/colorPrimary"
         android:layout_marginStart="20dp"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
