--- a/app/src/main/res/layout/fragment_chore.xml
+++ b/app/src/main/res/layout/fragment_chore.xml
@@ -5,57 +5,46 @@
     android:id="@+id/fragHomeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/colorPrimary"
     tools:context=".fragments.ChoreFragment">
 
-    <TextView
-        android:id="@+id/homeRecyclerTitle"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/choreTopLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/home_all_chores_text"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="20dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="20dp"
-        android:textSize="@dimen/medium_text_size"
-        android:textStyle="bold"
-        />
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
+        <TextView
+            android:id="@+id/activeChoresButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="4dp"
+            android:textSize="@dimen/medium_text_size"
+            android:textStyle="bold"
+            android:layout_marginHorizontal="5dp"
+            app:layout_constraintEnd_toStartOf="@id/historyChoresButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textColor="?attr/colorOnPrimary"
+            android:text="@string/home_all_chores_text"
+            />
 
-    <TextView
-        android:id="@+id/activeChoresButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minWidth="0dp"
-        android:padding="2dp"
-        android:minHeight="0dp"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintEnd_toStartOf="@id/historyChoresButton"
-        app:layout_constraintTop_toTopOf="@id/homeRecyclerTitle"
-        app:layout_constraintBottom_toTopOf="@id/allChoresRecycler"
-        android:textColor="@color/primaryColor"
-        android:text="@string/home_active_chores_button"
-        />
-
-    <TextView
-        android:id="@+id/historyChoresButton"
-        android:minWidth="0dp"
-        android:padding="2dp"
-        android:minHeight="0dp"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/homeRecyclerTitle"
-        app:layout_constraintBottom_toTopOf="@id/allChoresRecycler"
-        android:layout_marginEnd="20dp"
-        android:textColor="@color/primaryColor"
-        android:text="@string/home_history_chores_button"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content" />
+        <TextView
+            android:id="@+id/historyChoresButton"
+            android:padding="4dp"
+            android:textSize="@dimen/medium_text_size"
+            android:textStyle="bold"
+            android:layout_marginHorizontal="5dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/activeChoresButton"
+            android:textColor="?attr/colorOnPrimary"
+            android:text="@string/home_history_chores_button"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/noChoresLeftText"
@@ -64,9 +53,10 @@
         android:text="@string/home_no_chores_left"
         android:textSize="@dimen/medium_text_size"
         android:textStyle="bold"
+        android:textColor="?attr/colorOnPrimary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/homeRecyclerTitle"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
@@ -74,7 +64,7 @@
         android:id="@+id/allChoresRecycler"
         style="?attr/recyclerViewStyle"
         app:layout_constraintBottom_toTopOf="@id/addChoreButton"
-        app:layout_constraintTop_toBottomOf="@id/homeRecyclerTitle"
+        app:layout_constraintTop_toBottomOf="@id/choreTopLayout"
         android:layout_marginBottom="5dp"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="15dp">
