--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <LinearLayout
         android:id="@+id/homeFragmentTopLayout"
@@ -10,18 +11,19 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="?attr/colorPrimary"
         >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="?attr/colorPrimaryVariant"
             >
 
             <ImageButton
                 android:id="@+id/homeToMenuButton"
-                android:layout_width="@dimen/large_text_size"
-                android:layout_height="@dimen/large_text_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
                 style="?attr/imageButtonStyle"
                 android:contentDescription="@string/home_item_place_holder"
                 android:src="@drawable/baseline_arrow_back_24"
@@ -43,21 +45,23 @@
                 android:layout_marginHorizontal="20dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                android:background="?attr/colorPrimaryVariant"
                 android:gravity="center"
                 android:maxLines="1"
                 android:maxWidth="280dp"
-                android:textSize="36sp"
+                android:textSize="20sp"
                 android:textColor="?attr/colorOnPrimary"
-                android:text=""
+                android:text="@string/home_name_placeholder"
                 app:autoSizeTextType="uniform"
-                app:autoSizeMaxTextSize="36sp"
-                app:autoSizeMinTextSize="20sp"
+                app:autoSizeMaxTextSize="20sp"
+                app:autoSizeMinTextSize="16sp"
                 />
 
             <ImageButton
                 android:id="@+id/homeSettingsButton"
-                android:layout_width="@dimen/large_text_size"
-                android:layout_height="@dimen/large_text_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
                 android:contentDescription="@string/add_members_button"
                 android:background="@android:color/transparent"
                 android:layout_marginEnd="20dp"
@@ -66,6 +70,12 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:src="@drawable/baseline_settings_24" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="?attr/colorPrimaryDark"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
@@ -77,15 +87,21 @@
         android:layout_below="@id/homeFragmentTopLayout"
         />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?attr/colorPrimaryDark"
+        android:layout_below="@id/homeFragContainer"
+        />
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/homeBottomNav"
         app:itemIconTint="?attr/colorOnPrimary"
         app:itemTextColor="?attr/colorOnPrimary"
-        app:itemBackground="?attr/colorPrimary"
+        android:background="?attr/colorPrimary"
         android:layout_alignParentBottom="true"
         app:menu="@menu/home_bottom_navigation"
         app:labelVisibilityMode="labeled"
-        />
+    />
 </RelativeLayout>
