--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -5,13 +5,15 @@
     android:id="@+id/fragHomeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/colorPrimary"
     tools:context=".fragments.NoteFragment">
 
     <TextView
         android:id="@+id/homeRecyclerTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/home_all_chores_text"
+        android:text="@string/home_notes_title"
+        android:textColor="?attr/colorOnPrimary"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="20dp"
@@ -26,9 +28,11 @@
         android:id="@+id/noChoresLeftText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/home_no_chores_left"
+        android:text="@string/home_no_notes_left"
+        android:textColor="?attr/colorOnPrimary"
         android:textSize="@dimen/medium_text_size"
         android:textStyle="bold"
+        android:translationZ="1sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/homeRecyclerTitle"
