--- a/app/src/main/res/layout/note_recycler_row.xml
+++ b/app/src/main/res/layout/note_recycler_row.xml
@@ -10,8 +10,6 @@
         android:minHeight="90dp"
         style="?attr/cardViewStyle"
         tools:ignore="MissingConstraints">
-        <!-- TODO: This color crashes the phone version-->
-        <!--        android:backgroundTint="@color/material_dynamic_neutral80"-->
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -21,8 +19,10 @@
 
             <TextView
                 android:id="@+id/noteRecyclerContent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:drawable/editbox_background"
+                android:backgroundTint="?attr/colorPrimary"
                 android:padding="10dp"
                 android:text="@string/home_name_placeholder"
                 android:textColor="?attr/colorOnPrimary"
@@ -34,6 +34,8 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/noteRecyclerContent"
                 app:layout_constraintEnd_toEndOf="parent"
+                android:background="@android:drawable/editbox_background"
+                android:backgroundTint="?attr/colorPrimary"
                 android:layout_margin="10dp"
                 android:paddingBottom="5dp"
                 android:textColor="?attr/colorOnPrimary"
