--- a/app/src/main/res/layout/user_icon_row.xml
+++ b/app/src/main/res/layout/user_icon_row.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:background="@drawable/dialog_background"
-    android:backgroundTint="@color/ivory"
+    android:backgroundTint="?attr/colorPrimary"
     android:padding="16dp"
     android:src="@drawable/baseline_person_24"
     android:contentDescription="@string/user_profile_pic_desc"
