--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,17 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Chorey" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-<!--    <style name="Theme.Chorey" parent="Theme.AppCompat.DayNight.NoActionBar">-->
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/primaryLightColorDark</item>
-        <item name="colorPrimaryVariant">@color/primaryColorDark</item>
-        <item name="colorOnPrimary">@color/primaryTextColorDark</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/secondaryLightColorDark</item>
-        <item name="colorSecondaryVariant">@color/secondaryColorDark</item>
-        <item name="colorOnSecondary">@color/secondaryTextColorDark</item>
-        <!-- Status bar color. -->
+        <item name="colorPrimary">@color/primary_color_dark</item>
+        <item name="colorPrimaryDark">@color/line_color_dark</item>
+        <item name="colorAccent">@color/secondary_color_dark</item>
+        <item name="android:textColorPrimary">@color/text_color_dark</item>
+        <item name="android:textColorSecondary">@color/text_color_dark</item>
+        <item name="colorOnPrimary">@color/text_color_dark</item>
+        <item name="colorSecondary">@color/secondary_color_dark</item>
+        <item name="colorPrimaryVariant">@color/black</item>
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:navigationBarColor">?attr/colorPrimary</item>
+
         <!-- Customize your theme here. -->
         <item name="cardViewStyle">@style/CardStyle</item>
         <item name="buttonStyle">@style/ChoreyButton</item>
