--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,42 +9,38 @@
     <color name="white">#FFFFFFFF</color>
     <color name="ivory">#FFFFFFF0</color>
 
-<!--    Brown colors -->
-<!--    <color name="primaryColor">#632700</color>-->
-<!--    <color name="primaryLightColor">#95512b</color>-->
-<!--    <color name="primaryDarkColor">#390000</color>-->
-<!--    <color name="secondaryColor">#635900</color>-->
-<!--    <color name="secondaryLightColor">#938533</color>-->
-<!--    <color name="secondaryDarkColor">#383000</color>-->
-<!--    <color name="primaryTextColor">#ffffff</color>-->
-<!--    <color name="secondaryTextColor">#ffffff</color>-->
+<!--    Light theme -->
+    <color name="primary_color">#FFFFF0</color>
+    <color name="background_color">#FFFFF0</color>
+    <color name="secondary_color">#ffc107</color>
+    <color name="text_color">#000000</color>
+    <color name="primary_color_green">#c7e5c8</color>
+    <color name="line_color">#d9dedb</color>
+
 
 <!--    Light mode -->
-    <color name="primaryColor">#c7e5c8</color>
-    <color name="primaryLightColor">#fafffb</color>
-    <color name="primaryDarkColor">#96b397</color>
-    <color name="secondaryColor">#ffc107</color>
-    <color name="secondaryLightColor">#fff350</color>
-    <color name="secondaryDarkColor">#c79100</color>
-    <color name="primaryTextColor">#000000</color>
-    <color name="secondaryTextColor">#000000</color>
+<!--    <color name="primaryColor">#c7e5c8</color>-->
+<!--    <color name="primaryLightColor">#fafffb</color>-->
+<!--    <color name="primaryDarkColor">#96b397</color>-->
+<!--    <color name="secondaryColor">#ffc107</color>-->
+<!--    <color name="secondaryLightColor">#fff350</color>-->
+<!--    <color name="secondaryDarkColor">#c79100</color>-->
+<!--    <color name="primaryTextColor">#000000</color>-->
+<!--    <color name="secondaryTextColor">#000000</color>-->
 
 <!--    Dark mode -->
-    <color name="primaryColorDark">#96b397</color>
-    <color name="primaryLightColorDark">#c7e5c8</color>
-    <color name="primaryDarkColorDark">#688369</color>
-    <color name="secondaryColorDark">#ffc107</color>
-    <color name="secondaryLightColorDark">#fff350</color>
-    <color name="secondaryDarkColorDark">#c79100</color>
-    <color name="primaryTextColorDark">#000000</color>
-    <color name="secondaryTextColorDark">#000000</color>
+    <color name="primary_color_dark">#141D26</color>
+    <color name="background_color_dark">#141D26</color>
+    <color name="secondary_color_dark">#ffc107</color>
+    <color name="text_color_dark">#FFFFF0</color>
+    <color name="line_color_dark">#546675</color>
 
-<!--    <color name="primaryColorDark">#009688</color>-->
+<!--    <color name="primaryColorDark">#FFFFF0</color>-->
 <!--    <color name="primaryLightColorDark">#52c7b8</color>-->
 <!--    <color name="primaryDarkColorDark">#00675b</color>-->
 <!--    <color name="secondaryColorDark">#ffa000</color>-->
 <!--    <color name="secondaryLightColorDark">#ffd149</color>-->
 <!--    <color name="secondaryDarkColorDark">#c67100</color>-->
-<!--    <color name="primaryTextColorDark">#000000</color>-->
+<!--    <color name="primaryTextColorDark">#FFFFF0</color>-->
 <!--    <color name="secondaryTextColorDark">#000000</color>-->
 </resources>
