--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,13 +28,12 @@
         <item name="layout_constraintStart_toStartOf">parent</item>
         <item name="layout_constraintTop_toTopOf">parent</item>
         <item name="strokeWidth">3dp</item>
-        <item name="strokeColor">@color/ivory</item>
-        <item name="android:backgroundTint">?attr/colorPrimary</item>
+        <item name="strokeColor">?attr/colorOnPrimary</item>
+        <item name="android:background">@drawable/dialog_background</item>
+        <item name="android:backgroundTint">?attr/colorPrimaryDark</item>
     </style>
 
     <style name="Chorey.AuthUI">
-<!--        <item name="android:windowBackground">?attr/colorPrimary</item>-->
-<!--        <item name="android:windowBackground">@color/background_color</item>-->
         <item name="android:colorPrimary">?attr/colorPrimary</item>
         <item name="android:colorPrimaryDark">?attr/colorPrimaryVariant</item>
         <item name="android:colorAccent">?attr/colorSecondary</item>
@@ -42,7 +41,10 @@
     </style>
 
     <style name="ChoreyButton" parent="Widget.AppCompat.Button">
-        <item name="backgroundTint">@color/ivory</item>
+        <item name="backgroundTint">?attr/colorPrimary</item>
+        <item name="android:background">@drawable/dialog_background</item>
+        <item name="backgroundTintMode">add</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
     </style>
 
     <style name="ChoreyButtonIcon">
@@ -56,10 +58,13 @@
     </style>
 
     <style name="EditTextLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="android:layout_marginStart">5dp</item>
+        <item name="android:layout_marginEnd">5dp</item>
         <item name="android:textColorHint">?attr/colorOnPrimary</item>
         <item name="hintTextColor">?attr/colorOnPrimary</item>
         <item name="boxStrokeColor">?attr/colorOnPrimary</item>
         <item name="counterTextColor">?attr/colorOnPrimary</item>
+        <item name="backgroundColor">?attr/colorPrimaryVariant</item>
     </style>
 
     <style name="TimePickerDialog" parent="ThemeOverlay.MaterialComponents.Dialog">
@@ -110,6 +115,7 @@
 
     <style name="FundTile">
         <item name="android:background">@drawable/dialog_background</item>
+        <item name="android:backgroundTint">?attr/colorPrimaryDark</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_rowWeight">1</item>
